2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-soup.el: Removed.

	* nnsoup.el: Removed.

	* nnultimate.el: Removed.

	* gnus-html.el (gnus-blocked-images): New variable.

	* message.el (message-prune-recipients): New function.
	(message-prune-recipient-rules): New variable.

	* gnus-cite.el (gnus-article-natural-long-line-p): New function to
	guess whether a long line is natural text or not.

	* gnus-html.el (gnus-html-schedule-image-fetching): Use
	gnus-process-plist and friends for compatibility.

2010-08-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-html.el: Require packages that define macros used in this file.
	(gnus-article-mouse-face): Declare to silence byte-compiler.
	(gnus-html-curl-sentinel): Use with-current-buffer, inhibit-read-only, and
	process-get.
	(gnus-html-put-image): Use plist-get to avoid getf.
	(gnus-html-prefetch-images): Use with-current-buffer.

2010-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-ems.el: Provide compatibility functions for
	gnus-set-process-plist.

	* gnus-sum.el (gnus-summary-stop-at-end-of-message)
	* gnus.el (gnus-valid-select-methods)
	* message.el (message-send-mail-partially-limit)
	* mm-decode.el (mm-text-html-renderer)
	* mml.el (mml-insert-mime-headers-always)
	* smiley.el (smiley-regexp-alist): Bump custom version.

2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el: require mm-url.
	(gnus-html-wash-tags): Clarify the code a bit by renaming the variable
	with the url to `url'.
	(gnus-html-wash-tags): Support cid: URLs/images.

2010-08-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el: As per discussion 3 years, 8 weeks, 3 days, 9 hours, 57
	minutes, 56 seconds ago on the ding list, remove the `w' and `i'
	bindings, as they aren't useful at all. `w' is moved to `W w'.

	* gnus-move.el: Removed file, since it doesn't really work.

	* gnus-html.el (gnus-article-html): Tell w3m that the input is